Add color scheme plugin

--- a/chart.html
+++ b/chart.html
@@ -5,27 +5,26 @@
 <body>
 	<canvas id="myChart"></canvas>
 
-	<script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+	<script src="./js/Chart.bundle.js"></script>
+	<script src="./js/chartjs-plugin-colorschemes.js"></script>
 
 	<script>
 		var ctx = document.getElementById('myChart');
 		var myChart = new Chart(ctx, {
-			type: 'bar',
+			type: 'pie',
 			data: {
-				labels: ['A','B','C','D','E','F','G','H','I','J','K','L','M','N','O','P','Q','R','S','T','U','V','W','X','Y','Z'],
+				labels: ['ART_AND_DESIGN','AUTO_AND_VEHICLES','BEAUTY','BOOKS_AND_REFERENCE','BUSINESS','COMICS','COMMUNICATION','DATING','EDUCATION','ENTERTAINMENT','EVENTS','FAMILY','FINANCE','FOOD_AND_DRINK','GAME','HEALTH_AND_FITNESS','HOUSE_AND_HOME','LIBRARIES_AND_DEMO','LIFESTYLE','MAPS_AND_NAVIGATION','MEDICAL','NEWS_AND_MAGAZINES','PARENTING','PERSONALIZATION','PHOTOGRAPHY','PRODUCTIVITY','SHOPPING','SOCIAL','SPORTS','TOOLS','TRAVEL_AND_LOCAL','VIDEO_PLAYERS','WEATHER'],
 				datasets: [{
-					label: 'Frequency',
-					data: [24373121,4762938,8982417,10805580,37907119,7486889,5143059,18058207,21820970,474021,1720909,11730498,7391366,21402466,23215532,5719422,297237,17897352,19059775,28691274,8022379,2835696,6505294,562732,5910495, 93172],
+					label: 'Average Rating',
+					data: [4.35806451612903,4.19041095890411,4.27857142857143,4.34606741573034,4.12145214521452,4.1551724137931,4.15853658536585,3.97076923076923,4.38903225806452,4.12617449664429,4.43555555555556,4.19227246708644,4.13188854489164,4.16697247706422,4.28632634457612,4.27710437710438,4.19736842105263,4.17846153846154,4.09490445859872,4.05161290322581,4.18914285714286,4.13218884120172,4.3,4.3359872611465,4.19211356466877,4.21139601139601,4.25966386554622,4.25559845559846,4.22351097178684,4.04741144414169,4.10929203539823,4.06375,4.244],
 				}]
 			},
 			options: {
-				scales: {
-					yAxes: [{
-						ticks: {
-							beginAtZero: true
-						}
-					}]
-				}
+				plugins: {
+					colorschemes: {
+					  scheme: 'brewer.Paired12'
+					}
+				  }
 			}
 		});
 </script>
